# PastChallenges

./: README.md
challenges/nationals-2024-25/: README.md
challenges/nationals-2024-25/defence/candidate_registry/: README.md  candidate_attacker.py  requirements.txt
challenges/nationals-2024-25/defence/electomap/: README.md
challenges/nationals-2024-25/defence/electomap/server_files/: README.md  electomap_attacker.py  pyproject.toml  sandbox.py  test_loop.sh  timeouts.md
challenges/nationals-2024-25/defence/vts/: .gitignore  Dockerfile  Makefile  README.md  bad-machine-ids.csv  bad-voter-list.csv  candidates.csv  cert.pem  crcbrute.py  docker-compose.yaml  key.pem  machine-id-clashes.csv  machine-ids.csv  prepare-data.py  slides.pptx  voter-list.csv  vts.lua  vts_attacker.py  vts_fixed.lua
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/: pyproject.toml
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/backend/alembic_migrations/: env.py  script.py.mako
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/backend/alembic_migrations/versions/: 2371e779bf42_init_fastapi_users.py  3fd74124ed08_add_national_id_and_dob.py  69f022dba49d_add_qr_code.py  923352270e4a_add_first_and_last_name.py
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/backend/app/: config.py  database.py  files.py  main.py  schemas.py  users.py
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/backend/app/routes/: scanner.py
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/frontend/: Dockerfile  next.config.ts  package.json
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/frontend/src/app/: globals.css  layout.tsx  page.tsx
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/frontend/src/app/badge/: page.tsx
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/frontend/src/app/login/: page.tsx
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/frontend/src/app/register/: page.tsx
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/frontend/src/app/scanner/: page.tsx
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/frontend/src/components/ui/: app-layout.tsx
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/frontend/src/lib/: api.ts  types.ts
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/internal_db/: employees.csv  init.sql  memos.csv  transactions.csv
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/scripts/: bundle.sh  deploy.sh  destroy.sh  gen_migrations.sh  init_storage.sh  sanity_check.py  tfstate_upload.sh
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/server_files/terraform/: .gitignore  .terraform.lock.hcl  config.tf  main.tf  outputs.tf  variables.tf
challenges/nationals-2024-25/jeopardy/web/a_scanner_pwnly/solve_files/: db_payload.py  env_payload.py  pyproject.toml  solve.py  solve.txt
challenges/nationals-2024-25/jeopardy/web/my-campaign-pal/server_files/: main.py  pyproject.toml
challenges/nationals-2024-25/jeopardy/web/vibe-management/server_files/vibe-management/: pyproject.toml
challenges/regionals-2024-25/: README.md
challenges/regionals-2024-25/cloud/voter-emailer/: README.md  WALKTHROUGH.md  main.py  requirements.txt  voters.txt
challenges/regionals-2024-25/crypto/candidate_registry/: README.md  SETUP.md
challenges/regionals-2024-25/crypto/encrypted_mfa/: README.md  WALKTHROUGH.md
challenges/regionals-2024-25/crypto/leaked_and_loaded/: README.md
challenges/regionals-2024-25/crypto/parts/: README.md
challenges/regionals-2024-25/defence/chatbot/: README.md
(+345 files in other folders)
