[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi-users[sqlalchemy]>=14.0.1",
  "fastapi[standard]>=0.115.11",
  "minio>=7.2.15",
  "pillow>=11.2.1",
  "pydantic-settings>=2.8.1",
  "qrcode>=8.0",
  "structlog>=25.2.0",
]

[dependency-groups]
dev = [
  "alembic>=1.15.1",
  "pre-commit>=4.1.0",
  "pyright>=1.1.396",
  "ruff>=0.11.0",
]

[tool.pyright]
venv = "."
venvPath = ".venv"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # fastapi
  "FAST",
]
extend-select = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
