[project]
name = "vibe-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.3",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.1",
]
